fix/workspace-selector-jumps-on-hover, fix hover jumping

--- a/src/plugins/workspace/public/components/workspace_selector/workspace_selector.scss
+++ b/src/plugins/workspace/public/components/workspace_selector/workspace_selector.scss
@@ -1,3 +1,9 @@
 .workspaceNameLabel {
   background-color: $euiSideNavBackgroundColor;
 }
+
+.popoverButton:hover,
+.popoverButton:focus {
+  transition: none !important;
+  transform: none !important;
+}
